# advent-of-code-2025

./: CMakeLists.txt  README.md
day1/: day1.cpp
day10/: day10.cpp
day11/: day11.cpp
day12/: day12.cpp
day2/: day2.cpp
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp
day6/: day6.cpp
day7/: day7.cpp  test
day8/: day8.cpp
day9/: day9.cpp
